--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -1,38 +1,21 @@
-$spaceamounts: (
-  5,
-  8,
-  10,
-  15,
-  20,
-  25,
-  30,
-  35,
-  40,
-  80,
-  90,
-  115,
-  125,
-  190,
-  345,
-  350
-); // Adjust this to include the pixel amounts you need.
+$spaceamounts: (5, 10, 15, 20, 25, 30, 35, 40); // Adjust this to include the pixel amounts you need.
 $sides: (top, bottom, left, right); // Leave this variable alone
 
 @each $space in $spaceamounts {
-  .m-#{$space} {
-    margin: #{$space}px !important;
-  }
-  .p-#{$space} {
-    padding: #{$space}px !important;
-  }
-  .radius-#{$space} {
-    border-radius: #{$space}px !important;
-  }
+    .m-#{$space}{
+        margin: #{$space}px !important;
+    }
+    .p-#{$space}{
+        padding: #{$space}px !important;
+    }
+    .radius-#{$space}{
+        border-radius: #{$space}px !important;
+    }
   @each $side in $sides {
     .m-#{str-slice($side, 0, 1)}-#{$space} {
       margin-#{$side}: #{$space}px !important;
     }
-
+  
     .p-#{str-slice($side, 0, 1)}-#{$space} {
       padding-#{$side}: #{$space}px !important;
     }
