--- a/src/app/shared/dialogs/view-documents/view-documents-dialog.html
+++ b/src/app/shared/dialogs/view-documents/view-documents-dialog.html
@@ -79,7 +79,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
@@ -91,7 +91,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
@@ -103,7 +103,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
@@ -115,7 +115,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
@@ -127,7 +127,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
@@ -139,7 +139,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
@@ -151,7 +151,7 @@
                 ><mat-icon class="m-l-20">descriptions</mat-icon>
               </div>
               <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">file size</div>
+              <div class="col-xs-3">300 kb</div>
               <div class="col-xs-1">
                 <mat-icon>delete_outline</mat-icon>
               </div>
