--- a/src/app/shared/dialogs/view-documents/view-documents-dialog.html
+++ b/src/app/shared/dialogs/view-documents/view-documents-dialog.html
@@ -1,189 +1,101 @@
-<!-- <fix-header></fix-header> -->
-<div class="page-start-point">
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <!-- fix part -->
-    <div class="row p-t-15 p-b-10">
-      <div class="col-xs-2">
-        <a
-          href="javascript:void(0)"
-          (click)="setButtonName('projectMaterials')"
-        >
-          <button
-            [class.active]="buttonName == 'projectMaterials'"
-            class="color-black"
-            mat-button
-          >
-            Project & Material
-          </button>
-        </a>
-      </div>
-      <div class="col-xs-2">
-        <a href="javascript:void(0)" (click)="setButtonName('addQueryMakes')">
-          <button
-            [class.active]="buttonName == 'addQueryMakes'"
-            class="color-black"
-            mat-button
-          >
-            Add Query & Makes
-          </button>
-        </a>
-      </div>
-      <div class="col-xs-2">
-        <a href="javascript:void(0)" (click)="setButtonName('selectSupplier')">
-          <button
-            [class.active]="buttonName == 'selectSupplier'"
-            class="color-black"
-            mat-button
-          >
-            Select Supplier
-          </button>
-        </a>
-      </div>
-      <div class="col-xs-2">
-        <a href="javascript:void(0)" (click)="setButtonName('uploadDocuments')">
-          <button
-            [class.active]="buttonName == 'uploadDocuments'"
-            class="color-black"
-            mat-button
-          >
-            Upload Documents & Terms
-          </button>
-        </a>
-      </div>
+<h1 mat-dialog-title>Add Supplier</h1>
 
-      <div class="text-right col-xs-3">
-        <button
-          mat-raised-button
-          class="main-background-color main-button color-white"
-        >
-          Preview
-        </button>
-      </div>
-    </div>
-
-    <!-- first row: select and upload -->
-
-    <div class="row ">
-      <!-- first column: Select Document -->
-      <div class="col-md-6 col-xs-12">
-        <div class="row p-t-40 p-l-350 m-r-40">
-          <div class="col-xs-12">
-            <label for="select-document">Select Document</label>
-          </div>
-
-          <div class="col-xs-12 h-290 scroll-box">
-            <!-- Document line begins -->
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
+<div mat-dialog-content>
+  <div class="row p-l-100">
+    <!-- Documents -->
+    <div class="col-md-4 padding-0">
+      <label>Documents</label>
+      <div class="row m-t-20">
+        <div class="col-xs-12 scroll-box h-200">
+          <div class="row grey-full-border p-t-5 m-b-10">
+            <div class="col-xs-2">
+              <mat-icon>descriptions</mat-icon>
             </div>
-
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
-            </div>
-
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
-            </div>
-
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
-            </div>
-
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
-            </div>
-
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
-            </div>
-
-            <div class="row p-b-10 p-t-15 grey-border">
-              <div class="col-xs-2 m-l-10">
-                <mat-checkbox></mat-checkbox
-                ><mat-icon class="m-l-20">descriptions</mat-icon>
-              </div>
-              <div class="col-xs-5">Document Name</div>
-              <div class="col-xs-3">300 kb</div>
-              <div class="col-xs-1">
-                <mat-icon>delete_outline</mat-icon>
-              </div>
+            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-3 font-size14">300 kb</div>
+            <div class="col-xs-2">
+              <mat-icon>cloud_download</mat-icon>
             </div>
           </div>
-        </div>
-      </div>
 
-      <!-- second column: Upload Document -->
-      <div class="col-md-6 col-xs-12">
-        <div class="row p-t-125 p-r-345 p-l-35">
-          <div class="col-xs-12 p-l-190">
-            <label for="upload-document">
-              Upload Document
-            </label>
-          </div>
-          <div class="col-xs-12 grey-dotted-border p-t-90 p-r-115 p-l-115">
-            <div>
-              <label for="drag-and-drop">
-                Drag and drop or <a href="#">Browse</a> files to upload
-              </label>
+          <div class="row grey-full-border p-t-5 m-b-10">
+            <div class="col-xs-2">
+              <mat-icon>descriptions</mat-icon>
+            </div>
+            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-3 font-size14">300 kb</div>
+            <div class="col-xs-2">
+              <mat-icon>cloud_download</mat-icon>
             </div>
           </div>
-          <div class="col-xs-12 p-t-5 p-l-115">
-            <label for="success-upload">
-              filename has been successfully uploaded.
-            </label>
+
+          <div class="row grey-full-border p-t-5 m-b-10">
+            <div class="col-xs-2">
+              <mat-icon>descriptions</mat-icon>
+            </div>
+            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-3 font-size14">300 kb</div>
+            <div class="col-xs-2">
+              <mat-icon>cloud_download</mat-icon>
+            </div>
+          </div>
+
+          <div class="row grey-full-border p-t-5 m-b-10">
+            <div class="col-xs-2">
+              <mat-icon>descriptions</mat-icon>
+            </div>
+            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-3 font-size14">300 kb</div>
+            <div class="col-xs-2">
+              <mat-icon>cloud_download</mat-icon>
+            </div>
+          </div>
+
+          <div class="row grey-full-border p-t-5 m-b-10">
+            <div class="col-xs-2">
+              <mat-icon>descriptions</mat-icon>
+            </div>
+            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-3 font-size14">300 kb</div>
+            <div class="col-xs-2">
+              <mat-icon>cloud_download</mat-icon>
+            </div>
+          </div>
+
+          <div class="row grey-full-border p-t-5 m-b-10">
+            <div class="col-xs-2">
+              <mat-icon>descriptions</mat-icon>
+            </div>
+            <div class="col-xs-5 font-size14">Document Name</div>
+            <div class="col-xs-3 font-size14">300 kb</div>
+            <div class="col-xs-2">
+              <mat-icon>cloud_download</mat-icon>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- second row: terms and conditions -->
+    <!-- Text-area -->
+    <div class="col-md-8">
+      <div class="col-xs-12 m-l-15">
+        <label>Add Terms & Conditions</label>
+      </div>
+      <div class="col-xs-12 grey-full-border m-t-20">
+        <textarea matInput type="text" class="p-t-20 m-l-20 h-250 scroll-box">
+Terms of Payment:
+        
+A.20% as an Advance against Proforma Invoice showing tax break up.
+
+B.50% after Delivery of Materials with 15 Days Credit.
+
+C.30% after work completion with 30 Days Credit.
+
+D.The advance payment will be of the order value excluding GST.
+      
+              </textarea
+        >
+      </div>
+    </div>
   </div>
 </div>
