--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -11,22 +11,23 @@
                     </mat-expansion-panel-header>
                     <div>
                         <section class="mat-elevation-z2 mat-header-row">
-                            <span class="mat-header-cell">Material Name</span>
-                            <span class="mat-header-cell">Quantity</span>
-                            <span class="mat-header-cell">Makes & Rates</span>
+                            <span class="col-xs-2">Material Name</span>
+                            <span class="col-xs-2">Quantity</span>
+                            <span class="col-xs-8">Makes & Rates</span>
                         </section>
                     </div>
                     <mat-expansion-panel *ngFor="let material of project.materialList">
                         <mat-expansion-panel-header class="mat-row">
-                            <span class="mat-cell">{{material.materialName}} </span>
-                            <span class="mat-cell"> {{material.materialQty}} </span>
-                            <span class="mat-cell" *ngFor="let brand of material.brandList">
+                            <span class="col-xs-2">{{material.materialName}} </span>
+                            <span class="col-xs-2"> {{material.materialQty}} </span>
+                            <span class="col-xs-2" *ngFor="let brand of material.brandList">
                                 {{brand}}
                             </span>
                         </mat-expansion-panel-header>
                         <div class="mat-row" *ngFor="let supplier of material.supplierList">
-                            <span class="mat-cell">{{supplier.supplierName}} </span>
-                            <span class="mat-cell" *ngFor="let brandInfo of supplier.brandDetailList">
+                            <span class="col-xs-2">{{supplier.supplierName}} </span>
+                            <span class="col-xs-2"></span>
+                            <span class="col-xs-2" *ngFor="let brandInfo of supplier.brandDetailList">
                                 <span *ngIf="brandInfo!=null">
                                     <input matInput placeholder="quantity" class="m-r-5">
                                     <span
