Add-Address dialog box created

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -135,6 +135,7 @@ input {
 }
 
 .border-input input,
+.border-input select,
 .border-select .mat-form-field-flex {
   border-bottom: 2px solid $icon-color-gray;
   border-radius: 0px;
@@ -275,7 +276,8 @@ a:hover {
   width: 96%;
 }
 
-.mat-form-field textarea {
+.mat-form-field textarea,
+.gray-border {
   border: 1px solid $icon-color-gray;
 }
 
