--- a/src/app/features/rfq/quantity-makes/quantity-makes.component.html
+++ b/src/app/features/rfq/quantity-makes/quantity-makes.component.html
@@ -4,7 +4,10 @@
     <!-- fix part -->
     <div class="row p-t-15 p-b-10">
       <div class="col-xs-2">
-        <a href="javascript:void(0)" (click)="setButtonName('projectMaterials')">
+        <a
+          href="javascript:void(0)"
+          (click)="setButtonName('projectMaterials')"
+        >
           <button
             [class.active]="buttonName == 'projectMaterials'"
             class="color-black"
@@ -73,86 +76,144 @@
     </div>
     <!-- table structure -->
     <form [formGroup]="materialForms">
-    <mat-accordion class="accordion-padding-zero" formArrayName="forms">
-     <ng-template ngFor let-material [ngForOf]="checkedMaterialsList" let-mati="index">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{material.projectName}}----{{mati}}
-            <a href="javascript:void(0)" class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <!-- table part -->
-        <table
-        mat-table
-        [dataSource]="material.projectMaterialList"
-        class="mat-elevation-z8 col-sm-12"
-      >
-        <!--- Note that these columns can be defined in any order.
+      <mat-accordion class="accordion-padding-zero" formArrayName="forms">
+        <ng-template
+          ngFor
+          let-material
+          [ngForOf]="checkedMaterialsList"
+          let-mati="index"
+        >
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                {{ material.projectName }}----{{ mati }}
+
+                <div class="col-md-2 p-t-20 p-l-110 main-color">
+                  <button mat-button (click)="openDialog()">
+                    {{ material.defaultAddress.addressLine1 }}
+                  </button>
+                </div>
+
+                <!-- <a href="javascript:void(0)" class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a> -->
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <!-- table part -->
+            <table
+              mat-table
+              [dataSource]="material.projectMaterialList"
+              class="mat-elevation-z8 col-sm-12"
+            >
+              <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="Material Name">
-        <th mat-header-cell *matHeaderCellDef>Material Name</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.materialName }}
-        </td>
-        </ng-container>
+              <!-- Position Column -->
+              <ng-container matColumnDef="Material Name">
+                <th mat-header-cell *matHeaderCellDef>Material Name</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.materialName }}
+                </td>
+              </ng-container>
 
+              <ng-container matColumnDef="Required Date">
+                <th mat-header-cell *matHeaderCellDef>Required Date</th>
+                <td mat-cell *matCellDef="let element; let i = index">
+                  {{ element.dueDate }}
+                </td>
+              </ng-container>
+              <!-- Name Column -->
+              <ng-container matColumnDef="Requested Quantity">
+                <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.requestedQty }}
+                </td>
+              </ng-container>
+              <!-- Name Column -->
+              <ng-container matColumnDef="Estimated Quantity">
+                <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.estimatedQty }}
+                </td>
+              </ng-container>
+              <!-- estimated rate -->
+              <ng-container matColumnDef="Estimated Rate">
+                <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
+                <td mat-cell *matCellDef="let element; let i = index">
+                  <mat-form-field
+                    [formGroupName]="
+                      i +
+                      (mati ? checkedMaterialsList[mati].prevMatListLength : 0)
+                    "
+                    class="border-input table-input"
+                  >
+                    {{
+                      i +
+                        (mati
+                          ? checkedMaterialsList[mati].prevMatListLength
+                          : 0)
+                    }}<input
+                      matInput
+                      formControlName="estimatedRate"
+                      type="number"
+                      placeholder="Estimated Rate"
+                    />
+                  </mat-form-field>
+                </td>
+              </ng-container>
+              <!-- quantity -->
+              <ng-container matColumnDef="Quantity">
+                <th mat-header-cell *matHeaderCellDef>Quantity</th>
+                <td mat-cell *matCellDef="let element; let i = index">
+                  <mat-form-field
+                    [formGroupName]="
+                      i +
+                      (mati ? checkedMaterialsList[mati].prevMatListLength : 0)
+                    "
+                    class="border-input table-input"
+                  >
+                    {{
+                      i +
+                        (mati
+                          ? checkedMaterialsList[mati].prevMatListLength
+                          : 0)
+                    }}
+                    <input
+                      matInput
+                      formControlName="quantity"
+                      type="number"
+                      placeholder="Quantity"
+                    />
+                  </mat-form-field>
+                </td>
+              </ng-container>
+              <!-- makes -->
+              <ng-container matColumnDef="Makes">
+                <th mat-header-cell *matHeaderCellDef>Makes</th>
+                <td mat-cell *matCellDef="let element; let i = index">
+                  <!-- <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))" class="example-chip-list"> -->
+                  <app-chip
+                    (onUpdate)="
+                      makesUpdate(
+                        $event,
+                        i +
+                          (mati
+                            ? checkedMaterialsList[mati].prevMatListLength
+                            : 0)
+                      )
+                    "
+                  ></app-chip>
+                </td>
+              </ng-container>
 
-        <ng-container matColumnDef="Required Date">
-          <th mat-header-cell *matHeaderCellDef>Required Date</th>
-          <td mat-cell *matCellDef="let element; let i = index">
-            {{ element.dueDate }}
-          </td>
-        </ng-container>
-        <!-- Name Column -->
-        <ng-container matColumnDef="Requested Quantity">
-          <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
-        <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
-        </ng-container>
-        <!-- Name Column -->
-        <ng-container matColumnDef="Estimated Quantity">
-          <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
-        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
-        </ng-container>
-        <!-- estimated rate -->
-        <ng-container matColumnDef="Estimated Rate">
-          <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
-        <td mat-cell *matCellDef="let element; let i = index" >
-          <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))" class="border-input table-input">
-          {{i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0) }}<input matInput formControlName="estimatedRate" type="number" placeholder="Estimated Rate" />
-          </mat-form-field>
-        </td>
-        </ng-container>
-        <!-- quantity -->
-        <ng-container matColumnDef="Quantity">
-          <th mat-header-cell *matHeaderCellDef>Quantity</th>
-        <td mat-cell *matCellDef="let element; let  i= index">
-          <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))" class="border-input table-input">
-            {{i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0) }} <input matInput formControlName="quantity" type="number" placeholder="Quantity" />
-          </mat-form-field>
-        </td>
-        </ng-container>
-        <!-- makes -->
-        <ng-container matColumnDef="Makes">
-          <th mat-header-cell *matHeaderCellDef>Makes</th>
-        <td mat-cell *matCellDef="let element; let  i= index">
-          <!-- <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))" class="example-chip-list"> -->
-            <app-chip (onUpdate)="makesUpdate($event, (i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0)))" ></app-chip>
-        </td>
-        </ng-container>
+              <!-- Symbol Column -->
 
-        <!-- Symbol Column -->
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
 
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-        <!-- end table part -->
-      </mat-expansion-panel>
-     </ng-template>
-    </mat-accordion>
+            <!-- end table part -->
+          </mat-expansion-panel>
+        </ng-template>
+      </mat-accordion>
     </form>
     <!-- end table structure -->
     <!-- end fix part -->
