--- a/src/app/features/rfq/quantity-makes/quantity-makes.component.html
+++ b/src/app/features/rfq/quantity-makes/quantity-makes.component.html
@@ -78,7 +78,7 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{material.projectName}}----{{mati}}
+            {{material.projectName}}
             <a href="javascript:void(0)" class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a>
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -121,7 +121,7 @@
           <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
         <td mat-cell *matCellDef="let element; let i = index" >
           <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))" class="border-input table-input">
-          {{i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0) }}<input matInput formControlName="estimatedRate" type="number" placeholder="Estimated Rate" />
+          <input matInput formControlName="estimatedRate" type="number" placeholder="Estimated Rate" />
           </mat-form-field>
         </td>
         </ng-container>
@@ -130,7 +130,7 @@
           <th mat-header-cell *matHeaderCellDef>Quantity</th>
         <td mat-cell *matCellDef="let element; let  i= index">
           <mat-form-field [formGroupName]="(i +  (mati ? checkedMaterialsList[mati].prevMatListLength : 0))" class="border-input table-input">
-            {{i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0) }} <input matInput formControlName="quantity" type="number" placeholder="Quantity" />
+            <input matInput formControlName="quantity" type="number" placeholder="Quantity" />
           </mat-form-field>
         </td>
         </ng-container>
