Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/features/rfq/suppliers/suppliers.component.html
+++ b/src/app/features/rfq/suppliers/suppliers.component.html
@@ -73,6 +73,7 @@
         <button
           mat-raised-button
           [disabled]="!selectedSupplierFlag"
+          (click)="nevigateToUploadPage()"
           class="main-background-color main-button color-white"
         >
           Next
