--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,13 +1,13 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <div class="row m-b-10 p-l-80 p-r-80">
+    <div class="row m-b-10 ">
       <div class="col-md-12">
         <div class="row ">
           <div class="col-xs-12 p-t-10">
             <button
               mat-raised-button
-              class="main-background-color main-button color-white pull-right"
+              class="main-background-color main-button color-white pull-right m-r-30"
             >
               Float RFQ
             </button>
@@ -38,13 +38,13 @@
             </mat-form-field>
             <mat-icon>calendar_today</mat-icon>
           </div>
-          <div class="col-md-2 p-t-20 p-l-110 main-color">
-            <button mat-button (click)="openDialog1()">
-              comment
+          <div class="col-md-2 p-t-20 main-color">
+            <button mat-button class="pull-right" (click)="openDialog1()">
+              Comment
             </button>
           </div>
           <div class="col-md-3 p-t-20 main-color">
-            <button mat-button (click)="openDialog2()">
+            <button mat-button class="pull-right" (click)="openDialog2()">
               View Terms & Conditions/Documents
             </button>
           </div>
