--- a/src/app/shared/dialogs/view-documents/view-documents-dialog.html
+++ b/src/app/shared/dialogs/view-documents/view-documents-dialog.html
@@ -1,12 +1,14 @@
 <h1 mat-dialog-title>Add Supplier</h1>
 
 <div mat-dialog-content>
-  <div class="row p-l-100">
+  <div class="row ">
     <!-- Documents -->
-    <div class="col-md-4 padding-0">
-      <label>Documents</label>
-      <div class="row m-t-20">
-        <div class="col-xs-12 scroll-box h-200">
+    <div class="col-md-6">
+      <div class="col-md-8 pull-right">
+        <label>Documents</label>
+      </div>
+      <div>
+        <div class="col-md-8 scroll-box h-200 pull-right">
           <div class="row grey-full-border p-t-5 m-b-10">
             <div class="col-xs-2">
               <mat-icon>descriptions</mat-icon>
@@ -77,12 +79,12 @@
     </div>
 
     <!-- Text-area -->
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="col-xs-12 m-l-15">
         <label>Add Terms & Conditions</label>
       </div>
-      <div class="col-xs-12 grey-full-border m-t-20">
-        <textarea matInput type="text" class="p-t-20 m-l-20 h-250 scroll-box">
+      <div class="col-xs-12 grey-full-border">
+        <textarea matInput type="text" class="p-t-20 m-l-20 h-290 scroll-box">
 Terms of Payment:
         
 A.20% as an Advance against Proforma Invoice showing tax break up.
