--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -68,7 +68,7 @@ button:focus {
 }
 
 input {
-  background: $white-color;
+  // background: $white-color;
   padding: 10px;
   border-radius: 5px;
 }
