--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,3 +14,4 @@
     @import "./pages/bom-preview.scss";
     @import "./pages/global-store.component.scss";
     @import "./pages/rfq-bids.component.scss";
+    @import "./pages/po.component.scss";
