Signed-off-by: Renu <renu.kamboj@buildsupply.com>

--- a/src/app/shared/components/chip/chip.component.html
+++ b/src/app/shared/components/chip/chip.component.html
@@ -5,7 +5,7 @@
         {{fruit}}
         <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
       </mat-chip>
-      <input placeholder="New fruit..."
+      <input placeholder="New Brands..."
              [matChipInputFor]="chipList"
              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
              [matChipInputAddOnBlur]="addOnBlur"
