Auth module & "Issue to indent" dialog made.

--- a/src/app/features/rfq/documents/documents.component.html
+++ b/src/app/features/rfq/documents/documents.component.html
@@ -66,9 +66,15 @@
 
     <div class="row ">
       <!-- first column: Select Document -->
-      <app-upload #uploadRef class="col-xs-12" (onFileUpdate)="fileUpdate($event)"></app-upload>
+      <app-upload
+        #uploadRef
+        class="col-xs-12"
+        (onFileUpdate)="fileUpdate($event)"
+      ></app-upload>
     </div>
 
     <!-- second row: terms and conditions -->
+    <!-- <div [froalaEditor]>Hello, Froala!</div> -->
+    <!-- <froala></froala> -->
   </div>
 </div>
