--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -101,6 +101,18 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="customColumn">
+          <th *matHeaderCellDef mat-sort-header></th>
+          <td class="text-right" mat-cell *matCellDef="let element">
+            <a><mat-icon>edit</mat-icon> </a>
+            <a><mat-icon>delete_outline</mat-icon> </a>
+            <a (click)="openDialog1()"
+              >Issue to Indent
+              <mat-icon class="icon-inverse">open_in_browser</mat-icon></a
+            >
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="expandedDetail">
           <td
             mat-cell
