--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -285,3 +285,16 @@ a:hover {
   height: 100%;
   opacity: 0;
 }
+
+.password-eye {
+  float: left;
+  position: absolute;
+  right: 10px;
+}
+
+.icon-inverse {
+  -moz-transform: scaleY(-1);
+  -o-transform: scaleY(-1);
+  -webkit-transform: scaleY(-1);
+  transform: scaleY(-1);
+}
