--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,1 +1,8 @@
-<p>po works!</p>
+<div class="page-start-point">
+    <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+        <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData" [viewMode]="viewMode"></app-po-card>
+        <app-po-table #poTable *ngIf="tableData.length" [poTableData]="tableData" [viewMode]="viewMode"></app-po-table>
+        <button (click)="collateResults()">Button</button>
+        <button (click)="viewModes()">viewMode</button>
+    </div>
+</div>
