--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -53,7 +53,7 @@
                             " [formGroupName]="i">
                             <span *ngIf="brandInfo != null">
                               <mat-form-field class="border-input">
-                                <input matInput formControlName="quantity" matInput placeholder="quantity"
+                                <input class="quantity" matInput formControlName="quantity" placeholder="quantity"
                                   class="m-r-5" />
                               </mat-form-field>
                               <span *ngIf="brandInfo.materialUnitPrice != null">{{ brandInfo.materialUnitPrice }}</span>
